Version 5.9.19
- Added a warning for mixing tabs and spaces in Spin code
- Fixed some incorrect C array declarations
- Fixed precision not being reset in printf
- Implemented -E and -H flags for nu bytecode
- Implemented SPR[] in bytecode (thanks to Ada Gottensträter)
- Improved register allocation in leaf functions (thanks Ada)
- Improved optimization for small wait loops (also thanks to Ada)
- Made SPR[] work more like Spin1 (thanks Ada)
- Reimplemented TYPEOF to be more useful

Version 5.9.18
- Fixed missing # on output of jint style inline asm instructions
- Fixed some bugs in the BASIC open wrapper (handling of close and recv were dodgy)
- Fixed use of function aliases in submodules
- Fixed an address calculation bug in bytecode
- Made some nucode code generation improvements
- Minor tweak to preprocessor to better handle files that do not end with a newline

Version 5.9.17
- Added '=' as alternate immediate syntax for use in C macros.
- Added REGISTER keyword to BASIC
- Fixed ++ and -- operators for 64 bit variables
- Fixed signed modulus for 64 bit integers
- Fixed a bug in varargs handling for 64 bit values in bytecode
- Fixed output of C boolean operators in bytecode
- Fixed some problems with 32 to 64 bit casts in ASM output
- Fixed a bad check for immediate values in P1 rdlong/rdbyte/etc.
- Fixed a warning in BASIC about the _timezone variable.
- Made ALIGNW and ALIGNL keywords Spin2 only (some older Spin1 programs used these)
- On P2, allow coginit() of COG and LUT functions.
- Support register variables in C and BASIC
- Renamed LMM pc to __pc to avoid conflict with user code

Version 5.9.16
- Added UNION classes to BASIC
- Fixed a number of problems with 64 bit variables in bytecode
- Fixed an initializer bug in unions

Version 5.9.15
- Added definitions for PR0-PR7 registers in Spin2
- Added ORGH/END inline assembly in Spin2 for non-optimized hub based inline asm.
- Added MUXQ optimization for P2 pinwrite.